# Django

./: .gitignore  .travis.yml  pyproject.toml  requirements.txt
ProjectDjango/: settings.py  urls.py  wsgi.py
dz5/: .gitignore  db.sqlite3
dz5/ProjectDjango/: asgi.py  celery.py  middleware.py  settings.py  urls.py
dz5/home/: admin.py  forms.py  models.py  signals.py  tasks.py  views.py
dz5/home/management/commands/: insert_student.py  select_students.py
dz5/home/migrations/: 0004_auto_20210111_1313.py  0005_auto_20210216_1516.py  0006_auto_20210102_1408.py  0006_auto_20210216_1546.py  0007_book_title.py  0007_student_url.py  0008_auto_20210217_1437.py  0009_auto_20210217_1532.py  0010_currency.py  0011_auto_20210225_1150.py  0012_auto_20210225_1245.py
dz5/home/templates/: base.html  index.html  send_email.html  student_create.html  student_delete.html  update_student.html
