[tool.poetry]
name = "django test"
version = "0.1.0"
description = ""
authors = ["Ruslana Binko <binko.ryslana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.5"
flake8 = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
