[tool.poetry]
name = "django test"
version = "0.1.0"
description = ""
authors = ["Ruslana Binko <binko.ryslana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "3.1.5"
celery = "5.0.5"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
Faker = "5.8.0"
flake8 = "^3.8.4"
flake8-isort = "^4.0.0"
flake8-builtins = "^1.5.3"
flake8-print = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
